# ptloader

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
src/ptloader/: __init__.py  loader.py
tests/: test_loader.py
