[project]
name = "ptloader"
version = "0.1.4"
description = "Load torch checkpoints as NumPy arrays without torch at runtime."
readme = "README.md"
authors = [
    { name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "torch>=2.8.0",
]
